[project]
name = "python-github-link-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Zorin",email = "militarydriverb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
